menambahkan paragraf lorem

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Local Git to Github</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, fugit pariatur illum asperiores inventore
+        nobis repudiandae sint debitis quod quibusdam cupiditate quidem dolor amet iure eligendi distinctio nemo soluta
+        accusantium.</p>
 </body>
 
 </html>
